--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7069,6 +7069,73 @@ let result=catMouseGame(test);
 console.log(result);
 ```
 
+## 969. 煎饼排序
+
+给你一个整数数组 arr ，请使用 煎饼翻转 完成对数组的排序。
+
+一次煎饼翻转的执行过程如下：
+
+选择一个整数 k ，1 <= k <= arr.length
+反转子数组 arr[0...k-1]（下标从 0 开始）
+例如，arr = [3,2,1,4] ，选择 k = 3 进行一次煎饼翻转，反转子数组 [3,2,1] ，得到 arr = [1,2,3,4] 。
+
+以数组形式返回能使 arr 有序的煎饼翻转操作所对应的 k 值序列。任何将数组排序且翻转次数在 10 * arr.length 范围内的有效答案都将被判断为正确。
+
+提示：
+
+1 <= arr.length <= 100
+1 <= arr[i] <= arr.length
+arr 中的所有整数互不相同（即，arr 是从 1 到 arr.length 整数的一个排列）
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number[]}
+ */
+var pancakeSort = function(arr) {
+    let result=[];
+    let n=arr.length;
+    while(n>1){
+        let maxValueIndex=findMaxValueIndex(arr,n);
+        if (maxValueIndex!==n-1) {
+            if (maxValueIndex!==0) {
+                result.push(maxValueIndex+1);
+                swapArrSort(arr,maxValueIndex);
+            }
+            result.push(n);
+            swapArrSort(arr,n-1);
+        }
+        n--;
+        //console.log(arr);
+    }
+    return result;
+
+};
+var findMaxValueIndex=function(arr,n){
+    for(let i=0;i<n;i++){
+        if (arr[i]===n) {
+            return i;
+        }
+    }
+}
+var swapArrSort=function(arr,n){
+    let temp;
+    for(let i=0,j=n;i<j;i++,j--){
+        temp=arr[i];
+        arr[i]=arr[j];
+        arr[j]=temp;
+    }
+}
+
+
+let test=[3,2,4,5,6,1];
+let result=pancakeSort(test);
+console.log(result);
+
+```
+
+
+
 ## 1001. 网格照明
 
 在大小为 n x n 的网格 grid 上，每个单元格都有一盏灯，最初灯都处于 关闭 状态。
@@ -8319,6 +8386,48 @@ var sumOfUnique = function(nums) {
 };
 
 ```
+
+## 1791. 找出星型图的中心节点
+
+有一个无向的 星型 图，由 n 个编号从 1 到 n 的节点组成。星型图有一个 中心 节点，并且恰有 n - 1 条边将中心节点与其他每个节点连接起来。
+
+给你一个二维整数数组 edges ，其中 edges[i] = [ui, vi] 表示在节点 ui 和 vi 之间存在一条边。请你找出并返回 edges 所表示星型图的中心节点。
+
+提示：
+
+3 <= n <= 105
+edges.length == n - 1
+edges[i].length == 2
+1 <= ui, vi <= n
+ui != vi
+题目数据给出的 edges 表示一个有效的星型图
+
+```js
+/**
+ * @param {number[][]} edges
+ * @return {number}
+ */
+var findCenter = function(edges) {
+    let set=new Set();
+    for(let i=0;i<edges.length;i++){
+        if (set.has(edges[i][0])) {
+            return edges[i][0];
+        }
+        if (set.has(edges[i][1])) {
+            return edges[i][1];
+        }
+        set.add(edges[i][0]);
+        set.add(edges[i][1]);
+    }
+};
+
+let test=[[1,2],[2,3],[4,2]];
+let result=findCenter(test);
+console.log(result);
+
+```
+
+
 
 ## 1984. 学生分数的最小差值
 
