--- a/学习记录.md
+++ b/学习记录.md
@@ -132,3 +132,10 @@ axios , js文件读取
 
 力扣：赎金信(hashmap)，找不同(haspmap计数，求和，位运算)，判断子序列(双指针，动态规划)，骑士在棋盘上的概率
 
+2022.02.18
+
+力扣：找出星型图的中心节点
+
+2022.02.19
+
+力扣：煎饼排序
