--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6337,6 +6337,93 @@ console.log(result);
 
 ```
 
+## 401. 二进制手表
+
+二进制手表顶部有 4 个 LED 代表 小时（0-11），底部的 6 个 LED 代表 分钟（0-59）。每个 LED 代表一个 0 或 1，最低位在右侧。
+给你一个整数 turnedOn ，表示当前亮着的 LED 的数量，返回二进制手表可以表示的所有可能时间。你可以 按任意顺序 返回答案。
+
+小时不会以零开头：
+
+例如，"01:00" 是无效的时间，正确的写法应该是 "1:00" 。
+分钟必须由两位数组成，可能会以零开头：
+
+例如，"10:2" 是无效的时间，正确的写法应该是 "10:02" 。
+
+提示：
+
+0 <= turnedOn <= 10
+
+```js
+/**
+ * @param {number} turnedOn
+ * @return {string[]}
+ */
+var readBinaryWatch = function(turnedOn) {
+    if (turnedOn>8) {
+        return [];
+    }
+    //const hours=[0,1,2,4,8];
+    //const minutes=[0,1,2,4,8,16,32];
+    const hourOfNums=new Array(4);  //亮几个灯时能代表的小时数,最多亮三盏灯
+    for(let i=0;i<4;i++){
+        hourOfNums[i]=new Array();
+    }
+    for(let i=0;i<12;i++){
+        let numOfOne=countBitOfOne(i.toString(2));
+        hourOfNums[numOfOne].push(i.toString());
+    }
+
+    const minuteOfNums=new Array(6);  //亮几个灯时能代表的分钟数,最多亮5盏灯
+    for(let i=0;i<6;i++){
+        minuteOfNums[i]=new Array();
+    }
+    for(let i=0;i<60;i++){
+        let numOfOne=countBitOfOne(i.toString(2));
+        minuteOfNums[numOfOne].push(("00"+i.toString()).slice(-2));
+    }
+
+    let result=[];
+    for(let h=0;h<=turnedOn;h++){
+        let m=turnedOn-h;
+        if (h<=3 && m<=5) {
+            for(let i=0;i<hourOfNums[h].length;i++){
+                for(let j=0;j<minuteOfNums[m].length;j++){
+                    result.push(hourOfNums[h][i]+":"+minuteOfNums[m][j]);
+                }
+            }
+            
+        }
+    }
+    return result;
+};
+
+var countBitOfOne=function(bits){
+    let count=0;
+    bits=bits.split("");
+    for(let i=0;i<bits.length;i++){
+        count+=Number(bits[i]);
+    }
+    return count;
+}
+
+let test=1;
+let result=readBinaryWatch(test);
+console.log(result);
+
+```
+
+## 404. 左叶子之和
+
+给定二叉树的根节点 root ，返回所有左叶子之和。
+提示:
+
+节点数在 [1, 1000] 范围内
+-1000 <= Node.val <= 1000
+
+```
+
+```
+
 
 
 ## 472. 连接词
@@ -6784,6 +6871,63 @@ var knightProbability = function(n, k, row, column) {
 let n = 3, k = 2, row = 0, column = 0;
 let result=knightProbability(n, k, row, column);
 console.log(result);
+
+```
+
+
+
+## 717.  比特与2比特字符
+
+有两种特殊字符：
+
+第一种字符可以用一个比特 0 来表示
+第二种字符可以用两个比特(10 或 11)来表示、
+给定一个以 0 结尾的二进制数组 bits ，如果最后一个字符必须是一位字符，则返回 true 。
+
+提示:
+
+1 <= bits.length <= 1000
+bits[i] == 0 or 1
+
+```js
+/**
+ * @param {number[]} bits
+ * @return {boolean}
+ */
+var isOneBitCharacter = function(bits) {
+    let n=bits.length-1;
+    if (bits[n]===1) {
+        return false;
+    }
+    for(let i=0;i<n;){
+        if (i===n-1) {
+            if (bits[i]===1) {
+                return false;
+            }
+        }
+        if (bits[i]==1) {
+            i+=2;
+        }else{
+            i++;
+        }
+    }
+    return true;
+};
+
+let test=[1, 1, 1, 0];
+let result=isOneBitCharacter(test);
+console.log(result);
+
+```
+
+```js
+var isOneBitCharacter = function(bits) {
+    let i = 0, n = bits.length;
+    while (i < n - 1) {
+        i += bits[i] + 1;
+    }
+    return i === n - 1;
+};
 
 ```
 
