--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7039,6 +7039,82 @@ console.log(result);
 
 ```
 
+## 838. 推多米诺
+
+n 张多米诺骨牌排成一行，将每张多米诺骨牌垂直竖立。在开始时，同时把一些多米诺骨牌向左或向右推。
+
+每过一秒，倒向左边的多米诺骨牌会推动其左侧相邻的多米诺骨牌。同样地，倒向右边的多米诺骨牌也会推动竖立在其右侧的相邻多米诺骨牌。
+
+如果一张垂直竖立的多米诺骨牌的两侧同时有多米诺骨牌倒下时，由于受力平衡， 该骨牌仍然保持不变。
+
+就这个问题而言，我们会认为一张正在倒下的多米诺骨牌不会对其它正在倒下或已经倒下的多米诺骨牌施加额外的力。
+
+给你一个字符串 dominoes 表示这一行多米诺骨牌的初始状态，其中：
+
+dominoes[i] = 'L'，表示第 i 张多米诺骨牌被推向左侧，
+dominoes[i] = 'R'，表示第 i 张多米诺骨牌被推向右侧，
+dominoes[i] = '.'，表示没有推动第 i 张多米诺骨牌。
+返回表示最终状态的字符串。
+
+提示：
+
+n == dominoes.length
+1 <= n <= 105
+dominoes[i] 为 'L'、'R' 或 '.'
+
+```js
+/**
+ * @param {string} dominoes
+ * @return {string}
+ */
+var pushDominoes = function(dominoes) {
+    let n=dominoes.length;
+    dominoes=dominoes.split("");
+    let left=-1;  //往右倒的
+    let right=n;  //往左倒的
+    for(let i=0;i<n;i++){
+        if(dominoes[i]==="L"){
+            right=i;
+            if (left===-1) {
+                //前面向right倒的没有或倒完了
+                while(dominoes[right-1]==="."){
+                    dominoes[--right]="L";
+                }
+                right=n;
+            }else{
+                //前面有向right倒的
+                while((left+1)!==(right-1) && (left+1)!==right && left!==(right-1)){
+                    dominoes[++left]="R";
+                    dominoes[--right]="L";
+                }
+                left=-1;
+                right=n;
+            }
+        }else if(dominoes[i]==="R"){
+            if (left!==-1) {
+                //连续遇到往右倒的
+                while(dominoes[left+1]==="."){
+                    dominoes[++left]="R";
+                }
+            }
+            left=i;
+
+        }else{}
+    }
+    if (right===n && left!==-1) {
+        while((left+1)<n){
+            //后面只有往右倒的
+            dominoes[++left]="R";
+        }
+    }
+    return dominoes.join("");
+};
+
+let test=".L.R...LR..L..";
+let result=pushDominoes(test);
+console.log(result);
+```
+
 
 
 ## 846. 一手顺子
