--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7289,6 +7289,58 @@ let result=catMouseGame(test);
 console.log(result);
 ```
 
+## 917. 仅仅反转字母
+
+给你一个字符串 s ，根据下述规则反转字符串：
+
+所有非英文字母保留在原有位置。
+所有英文字母（小写或大写）位置反转。
+返回反转后的 s 。
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var reverseOnlyLetters = function(s) {
+	s=s.split("");
+    let right=s.length-1;
+    let left=0;
+    let temp="";
+    //console.log(set);
+    while(left<right){
+    	let acci1=s[left].toLowerCase().charCodeAt()
+        if (acci1>96 && acci1<123) {
+            temp=s[left];
+    		let acci2=s[right].toLowerCase().charCodeAt()
+            if (acci2>96 && acci2<123) {
+                s[left]=s[right];
+                s[right]=temp;
+                left++;
+                right--;
+            }else{
+                right--;
+            }
+        }else{
+            left++;
+        }
+    }
+    return s.join("");
+};
+
+let test= "a-bC-dEf-ghIj";
+let result=reverseOnlyLetters(test);
+console.log(result);
+
+//console.log("a".charCodeAt());  //97
+//console.log("z".charCodeAt());  //122
+//console.log("A".charCodeAt());  //65
+//console.log("Z".charCodeAt());  //90
+
+```
+
+
+
 ## 969. 煎饼排序
 
 给你一个整数数组 arr ，请使用 煎饼翻转 完成对数组的排序。
