--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6711,6 +6711,41 @@ let result=checkPerfectNumber(str1);
 console.log(result);
 ```
 
+## 537.复数乘法
+
+复数 可以用字符串表示，遵循 "实部+虚部i" 的形式，并满足下述条件：
+
+实部 是一个整数，取值范围是 [-100, 100]
+虚部 也是一个整数，取值范围是 [-100, 100]
+i2 == -1
+给你两个字符串表示的复数 num1 和 num2 ，请你遵循复数表示形式，返回表示它们乘积的字符串。
+
+提示：
+
+num1 和 num2 都是有效的复数表示。
+
+```js
+/**
+ * @param {string} num1
+ * @param {string} num2
+ * @return {string}
+ */
+var complexNumberMultiply = function(num1, num2) {
+    num1=num1.replace("i","").split("+");
+    num2=num2.replace("i","").split("+");
+    let real=Number(num1[0])*Number(num2[0])-Number(num1[1])*Number(num2[1]);
+    let imaginary_part=Number(num1[0])*Number(num2[1])+Number(num1[1])*Number(num2[0]);
+    return real.toString()+"+"+imaginary_part.toString()+"i";
+};
+
+
+let result=complexNumberMultiply("1+-1i","1+-1i");
+console.log(result);
+
+```
+
+
+
 ## 540. 有序数组中的单一元素
 
 给你一个仅由整数组成的有序数组，其中每个元素都会出现两次，唯有一个数只会出现一次。
@@ -8488,6 +8523,24 @@ let result=eatenApples(str1,str2);
 console.log(result);
 
 ```
+
+## 1706.  球会落何处
+
+ 用一个大小为 m x n 的二维网格 grid 表示一个箱子。你有 n 颗球。箱子的顶部和底部都是开着的。
+
+箱子中的每个单元格都有一个对角线挡板，跨过单元格的两个角，可以将球导向左侧或者右侧。
+
+将球导向右侧的挡板跨过左上角和右下角，在网格中用 1 表示。
+将球导向左侧的挡板跨过右上角和左下角，在网格中用 -1 表示。
+在箱子每一列的顶端各放一颗球。每颗球都可能卡在箱子里或从底部掉出来。如果球恰好卡在两块挡板之间的 "V" 形图案，或者被一块挡导向到箱子的任意一侧边上，就会卡住。
+
+返回一个大小为 n 的数组 answer ，其中 answer[i] 是球放在顶部的第 i 列后从底部掉出来的那一列对应的下标，如果球卡在盒子里，则返回 -1 。
+
+```
+
+```
+
+
 
 ## 1719. 重构一棵树的方案数
 
