--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8987,6 +8987,40 @@ var countKDifference = function(nums, k) {
 };
 ```
 
+## 2016. 增量元素之间的最大差值
+
+给你一个下标从 0 开始的整数数组 nums ，该数组的大小为 n ，请你计算 nums[j] - nums[i] 能求得的 最大差值 ，其中 0 <= i < j < n 且 nums[i] < nums[j] 。
+
+返回 最大差值 。如果不存在满足要求的 i 和 j ，返回 -1 。
+
+提示：
+
+n == nums.length
+2 <= n <= 1000
+1 <= nums[i] <= 109
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var maximumDifference = function(nums) {
+     let max_diff=0;
+     let min_val=nums[0];
+     for(let i=1;i<nums.length;i++){
+        let diff=nums[i]-min_val;
+        max_diff=max_diff>diff ? max_diff : diff;
+        min_val=nums[i]<min_val ? nums[i] : min_val;
+     }
+    return max_diff>0 ? max_diff : -1;
+};
+
+let test=[1,5,2,10];
+let result=maximumDifference(test);
+console.log(result);
+
+```
+
 
 
 ## 2022. 将一维数组转变成二维数组
