--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6420,8 +6420,159 @@ console.log(result);
 节点数在 [1, 1000] 范围内
 -1000 <= Node.val <= 1000
 
+深度优先
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var sumOfLeftLeaves = function(root) {
+   return root!==null ? dfs(root) : 0;
+};
+
+var dfs=function(root){
+   let ans=0;
+   if (root.left!==null) {
+      ans+=isLeafNode(root.left) ? root.left.val : dfs(root.left);
+   }
+   if (root.right!==null && !isLeafNode(root.right)) {
+      ans+=dfs(root.right);
+   }
+   return ans;
+}
+
+var isLeafNode=function(root){
+   return root.left===null && root.right===null;
+}
 ```
 
+广度优先
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var sumOfLeftLeaves = function(root) {
+   if (root===null) {
+      return 0;
+   }
+   const arr=[root];
+   let ans=0;
+   while(arr.length!==0){
+      let node=arr.shift();
+      if(node.left!==null){
+         if (isLeafNode(node.left)) {
+            ans+=node.left.val;
+         }else{
+            arr.push(node.left);
+         }
+      }
+      if (node.right!==null) {
+         if (!isLeafNode(node.right)) {
+            arr.push(node.right);
+         }
+      }
+   }
+   return ans;
+};
+
+var isLeafNode=function(root){
+   return root.left===null && root.right===null;
+}
+```
+
+## 405. 数字转换为十六进制数
+
+给定一个整数，编写一个算法将这个数转换为十六进制数。对于负整数，我们通常使用 补码运算 方法。
+
+注意:
+
+十六进制中所有字母(a-f)都必须是小写。
+十六进制字符串中不能包含多余的前导零。如果要转化的数为0，那么以单个字符'0'来表示；对于其他情况，十六进制字符串中的第一个字符将不会是0字符。 
+给定的数确保在32位有符号整数范围内。
+不能使用任何由库提供的将数字直接转换或格式化为十六进制的方法。
+
+![数字转换为十六进制数](E:\pogject\学习笔记\image\leetcode\数字转换为十六进制数.png)
+
+```js
+/**
+ * @param {number} num
+ * @return {string}
+ */
+var toHex = function(num) {
+   if (num===0) {
+      return "0";
+   }
+   const ans=[];
+   for (let i=7;i>=0;i--){
+      let val=(num>>(4*i)) & 0xf;
+      if (ans.length>0 || val>0) {
+         let digit=val<10 ? String.fromCharCode("0".charCodeAt()+val) : String.fromCharCode("a".charCodeAt()+val-10);
+         ans.push(digit);
+      }
+   }
+   return ans.join("");
+};
+
+
+let test=26;
+let result=toHex(test);
+console.log(result);
+```
+
+## 409. 最长回文串
+
+给定一个包含大写字母和小写字母的字符串 s ，返回 通过这些字母构造成的 最长的回文串 。
+
+在构造过程中，请注意 区分大小写 。比如 "Aa" 不能当做一个回文字符串。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var longestPalindrome = function(s) {
+   let m=new Map();
+   for(let i=0;i<s.length;i++){
+      m.set(s[i],m.has(s[i]) ? m.get(s[i])+1 : 1);
+   }
+   let ans=0;
+   let flag=false;  //是否存在奇数个，中间可以是奇数个
+   for(let val of m.values()){
+      if (val%2===0) {
+         ans+=val;
+      }else{
+         ans+=val-1;
+         flag=true;
+      }
+   }
+   if (flag) {
+      ans+=1;
+   }
+   return ans;
+};
+
+let test="abccccdd";
+let result=longestPalindrome(test);
+console.log(result);
 ```
 
 
@@ -6785,6 +6936,40 @@ console.log(result);
 ```
 
 ![有序数组中的单一元素（全数组的二分查找）](E:\pogject\学习笔记\image\leetcode\有序数组中的单一元素（全数组的二分查找）.png)
+
+## 553.最优除法
+
+给定一组正整数，相邻的整数之间将会进行浮点除法操作。例如， [2,3,4] -> 2 / 3 / 4 。
+
+但是，你可以在任意位置添加任意数目的括号，来改变算数的优先级。你需要找出怎么添加括号，才能得到最大的结果，并且返回相应的字符串格式的表达式。你的表达式不应该含有冗余的括号。
+
+说明:
+
+输入数组的长度在 [1, 10] 之间。
+数组中每个元素的大小都在 [2, 1000] 之间。
+每个测试用例只有一个最优除法解。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {string}
+ */
+var optimalDivision = function(nums) {
+   let n=nums.length;
+   if (n===1) {
+      return nums[0]+"";
+   }
+   if (n===2) {
+      return nums.join("/");
+   }
+   let result=nums[0]+"/("+nums.slice(1,n).join("/")+")"
+   return result;
+};
+
+let test=[1000,100,10,2];
+let result=optimalDivision(test);
+console.log(result);
+```
 
 
 
