--- a/学习记录.md
+++ b/学习记录.md
@@ -172,9 +172,9 @@ vue：v-on,v-if
 
 2022.02.27
 
-力扣：最优除法 ，数字转换为十六进制数，左叶子之和
+力扣：最优除法 ，数字转换为十六进制数，左叶子之和 ，最长回文串
 
 2022.02.28
 
-力扣：
+力扣：最多可达成的换楼请求数目
 
