--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8505,6 +8505,76 @@ console.log(String.fromCharCode(122));  //z
 
 ```
 
+## 1601. 最多可达成的换楼请求数目
+
+我们有 n 栋楼，编号从 0 到 n - 1 。每栋楼有若干员工。由于现在是换楼的季节，部分员工想要换一栋楼居住。
+
+给你一个数组 requests ，其中 requests[i] = [fromi, toi] ，表示一个员工请求从编号为 fromi 的楼搬到编号为 toi 的楼。
+
+一开始 所有楼都是满的，所以从请求列表中选出的若干个请求是可行的需要满足 每栋楼员工净变化为 0 。意思是每栋楼 离开 的员工数目 等于 该楼 搬入 的员工数数目。比方说 n = 3 且两个员工要离开楼 0 ，一个员工要离开楼 1 ，一个员工要离开楼 2 ，如果该请求列表可行，应该要有两个员工搬入楼 0 ，一个员工搬入楼 1 ，一个员工搬入楼 2 。
+
+请你从原请求列表中选出若干个请求，使得它们是一个可行的请求列表，并返回所有可行列表中最大请求数目。
+
+提示：
+
+1 <= n <= 20
+1 <= requests.length <= 16
+requests[i].length == 2
+0 <= fromi, toi < n
+
+回溯 + 枚举
+
+```
+/**
+ * @param {number} n
+ * @param {number[][]} requests
+ * @return {number}
+ */
+var maximumRequests = function(n, requests) {
+   const delta=new Array(n).fill(0);
+   let zero=n,ans=0,cnt=0;
+   const dfs=(requests,pos)=>{
+      if (pos===requests.length) {
+         if (zero===n) {
+            ans=Math.max(ans,cnt);
+         }
+         return;
+      }
+      //不选 requests[pos]
+      dfs(requests,pos+1);
+      //选 requests[pos]
+      let z=zero;
+      ++cnt;
+      const r=requests[pos];
+      let x=r[0],y=r[1];
+      //增加或减少前为0,zero减 1
+      zero-=delta[x]===0 ? 1:0;
+      --delta[x];
+      //增加或减少后为0,zero加1
+      zero+=delta[x]===0 ? 1:0;
+      //增加或减少前为0,zero减 1
+      zero-=delta[y]===0 ? 1:0;
+      ++delta[y];
+      //增加或减少后为0,zero加1
+      zero+=delta[y]===0 ? 1:0;
+      dfs(requests,pos+1);
+      --delta[y];
+      ++delta[x];
+      --cnt;
+      zero=z;
+   }
+   dfs(requests,0);
+   return ans;
+};
+
+let n = 5;
+let requests = [[0,1],[1,0],[0,1],[1,2],[2,0],[3,4]]
+let result=maximumRequests(n,requests);
+console.log(result);
+```
+
+
+
 ## 1614.括号的最大嵌套深度
 
 如果字符串满足以下条件之一，则可以称之为 **有效括号字符串**（valid parentheses string，可以简写为 VPS）：
