--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6575,6 +6575,97 @@ let result=longestPalindrome(test);
 console.log(result);
 ```
 
+## 412. Fizz Buzz
+
+给你一个整数 n ，找出从 1 到 n 各个整数的 Fizz Buzz 表示，并用字符串数组 answer（下标从 1 开始）返回结果，其中：
+
+answer[i] == "FizzBuzz" 如果 i 同时是 3 和 5 的倍数。
+answer[i] == "Fizz" 如果 i 是 3 的倍数。
+answer[i] == "Buzz" 如果 i 是 5 的倍数。
+answer[i] == i （以字符串形式）如果上述条件全不满足。
+
+提示：
+
+1 <= n <= 104
+
+```js
+/**
+ * @param {number} n
+ * @return {string[]}
+ */
+var fizzBuzz = function(n) {
+   const ans=["1"];
+   let i=2;
+   while(i<=n){
+      if (i%3===0 && i%5===0) {
+         ans.push("FizzBuzz");
+      }else if(i%3===0){
+         ans.push("Fizz");
+      }else if(i%5===0){
+         ans.push("Buzz");
+      }else{
+         ans.push(i+"");
+      }
+      i++;
+   }
+   return ans;
+};
+
+let n = 5;
+let result=fizzBuzz(n);
+console.log(result);
+```
+
+## 414. 第三大的数
+
+给你一个非空数组，返回此数组中 第三大的数 。如果不存在，则返回数组中最大的数。
+提示：
+
+1 <= nums.length <= 104
+-231 <= nums[i] <= 231 - 1
+
+用一个有序集合来维护数组中前三大的数
+
+```python
+from sortedcontainers import SortedList
+
+class Solution:
+    def thirdMax(self, nums: List[int]) -> int:
+        s = SortedList()
+        for num in nums:
+            if num not in s:
+                s.add(num)
+                if len(s) > 3:
+                    s.pop(0)
+        return s[0] if len(s) == 3 else s[-1]
+
+```
+
+进阶：你能设计一个时间复杂度 O(n) 的解决方案吗？
+
+```js
+var thirdMax = function(nums) {
+    let a = -Number.MAX_VALUE, b = -Number.MAX_VALUE, c = -Number.MAX_VALUE;
+    for (const num of nums) {
+        if (num > a) {
+            c = b;
+            b = a;
+            a = num;
+        } else if (a > num && num > b) {
+            c = b;
+            b = num;
+        } else if (b > num && num > c) {
+            c = num;
+        }
+    }
+    return c === -Number.MAX_VALUE ? a : c;
+};
+
+let nums = [3, 2, 1,2,3,4,2,5];
+let result=thirdMax(nums);
+console.log(result);
+```
+
 
 
 ## 472. 连接词
