--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -243,6 +243,8 @@ console.log(result);
 解释："aba" 同样是符合题意的答案。
 ```
 
+方法一：动态规划
+
 ```js
 /**
  * @param {string} s
@@ -257,7 +259,7 @@ var longestPalindrome = function(s) {
     //从最长到最短判断
     for (let i=0;i<s.length;i++){
         for (let j=i;j<s.length;i++){
-            if (s[j]!===s[s.length-1-j]) {
+            if (s[j]!==s[s.length-1-j]) {
 
                 flag1=true;
                 break;
@@ -301,7 +303,7 @@ string convert(string s, int numRows);
 - `s` 由英文字母（小写和大写）、`','` 和 `'.'` 组成
 - `1 <= numRows <= 1000`
 
-```
+```js
 /**
  * @param {string} s
  * @param {number} numRows
@@ -309,14 +311,59 @@ string convert(string s, int numRows);
  */
 var convert = function(s, numRows) {
     if (numRows===1) {return s;}
-    
-    return newStr;
+    let n=s.length;
+    //每一个周期需要2n-2个
+    let cycles=2*numRows-2;
+    let ans=[];
+    //第一行
+    for(let i=0;i<n;i+=cycles){
+      ans.push(s[i]);
+    }
+    //中间部分
+    for(let j=1;j<numRows-1;j++){
+      for(let i=0;i<n;i+=cycles){
+         if (i+j<n) {
+            ans.push(s[i+j]);
+         }
+         if (i+cycles-j<n) {
+            ans.push(s[i+cycles-j])
+         }
+         
+      }
+    }
+    //最后一行
+    for(let i=numRows-1;i<n;i+=cycles){
+      ans.push(s[i]);
+    }
+    return ans.join("");
 };
 
 let str1 = "basanaadsfenafdrrgeana";
-let result=convert(str1);
+let result=convert(str1,3);
 console.log(result);
 ```
+
+```js
+var convert = function(s, numRows) {
+    const n = s.length, r = numRows;
+    if (r === 1 || r >= n) {
+        return s;
+    }
+    const t = r * 2 - 2;
+    const ans = [];
+    for (let i = 0; i < r; i++) { // 枚举矩阵的行
+        for (let j = 0; j < n - i; j += t) { // 枚举每个周期的起始下标
+            ans.push(s[j + i]); // 当前周期的第一个字符
+            if (0 < i && i < r - 1 & j + t - i < n) {
+                ans.push(s[j + t - i]); // 当前周期的第二个字符
+            }
+        }
+    }
+    return ans.join('');
+};
+```
+
+
 
 ## 7. 整数反转
 
