--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -253,6 +253,7 @@ console.log(result);
 var longestPalindrome = function(s) {
     if (s.length===1) {return 1;}
     let maxLen=s.length;
+    let center=s.length>>1;
     let flag1=false;
     let flag2=false;
     let newArr=[];  //
@@ -265,8 +266,9 @@ var longestPalindrome = function(s) {
                 break;
             }
         }
+
         for (let j=i;j<s.length;i++){
-            if (s[i]!===s[s.length-1-i]) {
+            if (s[i]!==s[s.length-1-i]) {
                 flag1=true;
                 break;
             }
@@ -277,7 +279,6 @@ var longestPalindrome = function(s) {
 
 
 let str1 = "babad";
-let str2=[3,4];
 let result=longestPalindrome(str1);
 console.log(result);
 ```
