--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7110,6 +7110,56 @@ let result=optimalDivision(test);
 console.log(result);
 ```
 
+## 564. 寻找最近的回文数
+
+给定一个表示整数的字符串 n ，返回与它最近的回文整数（不包括自身）。如果不止一个，返回较小的那个。
+
+“最近的”定义为两个整数差的绝对值最小。
+提示:
+
+1 <= n.length <= 18
+n 只由数字组成
+n 不含前导 0
+n 代表在 [1, 1018 - 1] 范围内的整数
+
+![寻找最近的回文数](E:\pogject\学习笔记\image\leetcode\寻找最近的回文数.png)
+
+```
+/**
+ * @param {string} n
+ * @return {string}
+ */
+var nearestPalindromic = function(n) {
+   let flag1=false;
+   let min_val=Number(n);
+   let max_val=Number(n);
+   while(!flag1){
+      flag1=isPalindrome(--min_val);
+      if (flag1) {
+         return min_val.toString();
+      }
+      flag1=isPalindrome(++max_val)
+      if (flag1) {
+         return max_val.toString();
+      }
+   }
+};
+
+var isPalindrome=function(n){
+   n=n.toString();
+   for(let i=0,j=n.length-1;i<j;i++,j--){
+      if (n[i]!=n[j]) {
+         return false;
+      }
+   }
+    return true;
+}
+
+let n="110"
+let result=nearestPalindromic(n);
+console.log(result);
+```
+
 
 
 ## 686. 重复叠加字符串匹配
