--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6714,6 +6714,75 @@ let result=thirdMax(nums);
 console.log(result);
 ```
 
+## 415. 字符串相加
+
+给定两个字符串形式的非负整数 num1 和num2 ，计算它们的和并同样以字符串形式返回。
+
+你不能使用任何內建的用于处理大整数的库（比如 BigInteger）， 也不能直接将输入的字符串转换为整数形式。
+
+提示：
+
+1 <= num1.length, num2.length <= 104
+num1 和num2 都只包含数字 0-9
+num1 和num2 都不包含任何前导零
+
+```js
+/**
+ * @param {string} num1
+ * @param {string} num2
+ * @return {string}
+ */
+var addStrings = function(num1, num2) {
+   if (num2.length>num1.length) {
+      [num1,num2]=[num2,num1];
+   }
+   let m=num1.length-1;
+   let n=num2.length-1;
+   num1=num1.split("");
+   let e=0;
+   while(n>=0){
+      let plus=e+Number(num1[m])+Number(num2[n]);
+      num1[m]=plus>9 ? plus-10 : plus;
+      e=plus>9 ? 1 : 0;
+      m--;
+      n--;
+   }
+   while(m>=0 && e>0){
+      let plus=e+Number(num1[m]);
+      num1[m]=plus>9 ? plus-10 : plus;
+      e=plus>9 ? 1 : 0;
+      m--;
+   }
+   if (e>0) {
+      num1.unshift(1);
+   }
+   return num1.join("");
+
+};
+
+let num1 = "456", num2 = "77000";
+let result=addStrings(num1,num2);
+console.log(result);
+```
+
+```js
+var addStrings = function(num1, num2) {
+    let i = num1.length - 1, j = num2.length - 1, add = 0;
+    const ans = [];
+    while (i >= 0 || j >= 0 || add != 0) {
+        const x = i >= 0 ? num1.charAt(i) - '0' : 0;
+        const y = j >= 0 ? num2.charAt(j) - '0' : 0;
+        const result = x + y + add;
+        ans.push(result % 10);
+        add = Math.floor(result / 10);
+        i -= 1;
+        j -= 1;
+    }
+    return ans.reverse().join('');
+};
+
+```
+
 
 
 ## 472. 连接词
