--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9573,3 +9573,44 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+## 2104子数组范围和
+
+给你一个整数数组 nums 。nums 中，子数组的 范围 是子数组中最大元素和最小元素的差值。
+
+返回 nums 中 所有 子数组范围的 和 。
+
+子数组是数组中一个连续 非空 的元素序列。
+
+提示：
+
+1 <= nums.length <= 1000
+-109 <= nums[i] <= 109
+
+
+进阶：你可以设计一种时间复杂度为 O(n) 的解决方案吗
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var subArrayRanges = function(nums) {
+   let ans=0;
+   let n=nums.length;
+   for(let i=0;i<n;i++){
+      let minValue=Number.MAX_VALUE,maxValue=-Number.MAX_VALUE;
+      for(let j=i;j<n;j++){
+         minValue=Math.min(minValue,nums[j]);
+         maxValue=Math.max(maxValue,nums[j]);
+         ans+=maxValue-minValue;
+      }
+   }
+   return ans;
+
+};
+
+let str1=[1,2,3,4,5];
+let result=subArrayRanges(str1);
+console.log(result);
+```
+
