--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7070,6 +7070,62 @@ let result=checkPerfectNumber(str1);
 console.log(result);
 ```
 
+## 521. 最长特殊序列 Ⅰ
+
+给你两个字符串 a 和 b，请返回 这两个字符串中 最长的特殊序列  的长度。如果不存在，则返回 -1 。
+
+「最长特殊序列」 定义如下：该序列为 某字符串独有的最长子序列（即不能是其他字符串的子序列） 。
+
+字符串 s 的子序列是在从 s 中删除任意数量的字符后可以获得的字符串。
+
+例如，"abc" 是 "aebdc" 的子序列，因为删除 "aebdc" 中斜体加粗的字符可以得到 "abc" 。 "aebdc" 的子序列还包括 "aebdc" 、 "aeb" 和 "" (空字符串)。
+
+提示：
+
+1 <= a.length, b.length <= 100
+a 和 b 由小写英文字母组成
+
+```js
+/**
+ * @param {string} a
+ * @param {string} b
+ * @return {number}
+ */
+var findLUSlength = function(a, b) {
+   let m=a.length;
+   let n=b.length;
+   if (m!==n) {
+      return Math.max(m,n);
+   }
+    //这样貌似有问题
+   while(m>0){
+      m--;
+      if (a[m]!==b[m]) {
+         return Math.max(m+1,n-m-1);
+      }
+   }
+   return -1;
+};
+
+let a = "aba", b = "cdc";
+let result=findLUSlength(a,b);
+console.log(result);
+```
+
+字符串的子序列的长度不会超过该字符串的长度。若子序列的长度等于字符串的长度，那么子序列就是该字符串。
+
+若两字符串不相同，那么我们可以选择较长的字符串作为最长特殊序列，显然它不会是较短的字符串的子序列。特别地，当两字符串长度相同时（但不是同一字符串），我们仍然可以选择其中的一个字符串作为最长特殊序列，它不会是另一个字符串的子序列。
+
+若两字符串相同，那么任一字符串的子序列均会出现在两个字符串中，此时应返回 -1。
+
+```js
+var findLUSlength = function(a, b) {
+    return a !== b ? Math.max(a.length, b.length) : -1;
+};
+```
+
+
+
 ## 537.复数乘法
 
 复数 可以用字符串表示，遵循 "实部+虚部i" 的形式，并满足下述条件：
