--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9629,6 +9629,93 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+## 2100. 适合打劫银行的日子
+
+你和一群强盗准备打劫银行。给你一个下标从 0 开始的整数数组 security ，其中 security[i] 是第 i 天执勤警卫的数量。日子从 0 开始编号。同时给你一个整数 time 。
+
+如果第 i 天满足以下所有条件，我们称它为一个适合打劫银行的日子：
+
+第 i 天前和后都分别至少有 time 天。
+第 i 天前连续 time 天警卫数目都是非递增的。
+第 i 天后连续 time 天警卫数目都是非递减的。
+更正式的，第 i 天是一个合适打劫银行的日子当且仅当：security[i - time] >= security[i - time + 1] >= ... >= security[i] <= ... <= security[i + time - 1] <= security[i + time].
+
+请你返回一个数组，包含 所有 适合打劫银行的日子（下标从 0 开始）。返回的日子可以 任意 顺序排列。
+
+提示：
+
+1 <= security.length <= 105
+0 <= security[i], time <= 105
+
+```js
+/**
+ * @param {number[]} security
+ * @param {number} time
+ * @return {number[]}
+ */
+var goodDaysToRobBank = function(security, time) {
+   let ans=[];
+   let n=security.length;
+   let notbigthanbefore=new Array(n).fill(0);  //存储紧挨着当前元素之前连续非递增的元素个数
+   let notsmallthanlater=new Array(n).fill(0);  //存储紧挨着当前元素之后连续非递减的元素个数
+   let addcount=0;
+   let minuscount=0;
+   for(let i=1;i<n;i++){
+      if (security[i]>security[i-1]) {
+         notbigthanbefore[i]=0;
+         notsmallthanlater[i]=++addcount;
+         minuscount=0;
+      }else if(security[i]<security[i-1]){
+         notbigthanbefore[i]=++minuscount;
+         notsmallthanlater[i]=0;
+         addcount=0;
+      }else{
+         notbigthanbefore[i]=++minuscount;
+         notsmallthanlater[i]=++addcount;
+      }
+   }
+   //console.log(notbigthanbefore);
+   //console.log(notsmallthanlater);
+   for(let i=time;i<n-time;i++){
+      if (notbigthanbefore[i]>=time && notsmallthanlater[i+time]>=time) {
+         ans.push(i);
+      }
+   }
+   return ans;
+};
+
+let security = [1,2,3,4,5,6], time = 2;
+let result=goodDaysToRobBank(security,time);
+console.log(result);
+```
+
+```js
+var goodDaysToRobBank = function(security, time) {
+    const n = security.length;
+    const left = new Array(n).fill(0);
+    const right = new Array(n).fill(0);
+    for (let i = 1; i < n; i++) {
+        if (security[i] <= security[i - 1]) {
+            left[i] = left[i - 1] + 1;
+        }
+        if (security[n - i - 1] <= security[n - i]) {
+            right[n - i - 1] = right[n - i] + 1;
+        }
+    }
+
+    const ans = [];
+    for (let i = time; i < n - time; i++) {
+        if (left[i] >= time && right[i] >= time) {
+            ans.push(i);    
+        }
+    }
+    return ans;
+};
+
+```
+
+
+
 ## 2104子数组范围和
 
 给你一个整数数组 nums 。nums 中，子数组的 范围 是子数组中最大元素和最小元素的差值。
