--- a/微信小程序/小程序开发指南.md
+++ b/微信小程序/小程序开发指南.md
@@ -1,1 +1,261 @@
 # 小程序介绍与开发环境
+
+小程序是一种全新的连接用户与服务的方式，它可以在微信内被便捷地获取和传播，同时具有出色的使用体验。任何一个普通的开发者，经过简单的学习和练习后，都可以轻松地完成一个小程序的开发和发布。
+
+## 小程序介绍
+
+ 微信面临的问题是如何设计一个比较好的系统，使得所有开发者在微信中都能获得比较好的体验。这个问题是之前的 JS-SDK 所处理不了的，需要一个全新的系统来完成，它需要使得所有的开发者都能做到：
+
+*- 快速的加载*
+
+*- 更强大的能力*
+
+*- 原生的体验*
+
+*- 易用且安全的微信数据开放*
+
+*- 高效和简单的开发*
+
+ 这一系统就是本书中需要详细阐述的小程序。
+
+## 小程序的特色
+
+对于普通用户，小程序实现了应用的触手可及，只需要通过扫描二维码、搜索或者是朋友的分享就可以直接打开，加上优秀的体验，小程序使得服务提供者的触达能力变得更强。
+
+ 对于开发者而言，小程序框架本身所具有的快速加载和快速渲染能力，加之配套的云能力、运维能力和数据汇总能力，使得开发者不需要去处理琐碎的工作，可以把精力放置在具体的业务逻辑的开发上。
+
+ 小程序的模式使得微信可以开放更多的数据，开发者可以获取到用户的一些基本信息，甚至能够获取微信群的一些信息，使得小程序的开放能力变得更加强大。
+
+## 小程序开发准备
+
+### 1 申请AppID
+
+ 开发小程序的第一步，需要拥有一个小程序 AppID，后续的所有开发流程会基于这个 AppID 来完成。小程序的注册非常简单，只需几个操作。
+
+ 使用浏览器打开 https://mp.weixin.qq.com/ 点击立即注册，如图1-1所示，在打开的页面中选择小程序后，填入相关的信息，就可以完成注册了。
+
+注册成功之后，点击 “开发”—“开发设置” 就可以看到小程序的 AppID
+
+### 2 安装开发者工具
+
+ 在小程序开发文档中找到小程序开发工具的下载页面，或者直接输入 https://mp.weixin.qq.com/debug/wxadoc/dev/devtools/download.html 根据自己的操作系统下载对应的安装包进行安装。
+
+### 3第一个小程序
+
+ 打开小程序开发工具，使用之前注册小程序所使用的微信扫码登录。选择小程序项目
+
+ 首先在操作系统创建一个目录，而后在开发者工具中点击新建项目，选择刚创建的目录，填入 AppID，然后勾选 "创建 QuickStart 项目"，点击确定，那么第一个小程序项目就创建成功了。
+
+ 点击“开发者工具”工具栏上的预览按钮，使用微信扫描生成的二维码，就可以看到这个小程序在手机端上的表现了。
+
+```
+AppID(小程序ID)wx11e32ed6816ace7f	
+AppSecret(小程序密钥)73ed709e1ba85fa633308ad533748b5f
+```
+
+# 小程序代码组成
+
+小程序由配置代码JSON文件、模板代码 WXML 文件、样式代码 WXSS文件以及逻辑代码 JavaScript文件组成。
+
+## JSON 配置
+
+JSON 是一种数据格式，并不是编程语言，在小程序中，JSON扮演的静态配置的角色。
+
+### 一个例子
+
+先看一个例子，打开开发工具的编辑器，在根目录下可以找到 app.json 文件，双击打开，代码如下：
+
+代码清单2-1 app.json文件代码
+
+```json
+{
+    "pages": [
+        "pages/index/index"
+    ],
+    "window": {
+        "backgroundTextStyle": "light",
+        "navigationBarBackgroundColor": "#fff",
+        "navigationBarTitleText": "senbin",
+        "navigationBarTextStyle": "black"
+    },
+    "style": "v2",
+    "sitemapLocation": "sitemap.json"
+}
+```
+
+JSON文件在小程序代码中扮演静态配置的作用，在小程序运行之前就决定了小程序一些表现，需要注意的是小程序是无法在运行过程中去动态更新JSON 配置文件从而发生对应的变化的。
+
+### JSON 语法
+
+相比于XML ，JSON格式最大的优点是易于人的阅读和编写，通常不需要特殊的工具，就能读懂和修改，是一种轻量级的数据交换格式。
+
+JSON文件都是被包裹在一个大括号中 {}，通过key-value的方式来表达数据。
+
+看起来同 JavaScript 的对象表达方式十分相似，但是有所不同。
+
+**JSON的Key必须包裹在一个双引号中，**在实践中，编写 JSON 的时候，忘了给 Key 值加双引号或者是把双引号写成单引号是常见错误。
+
+JSON的值只能是以下几种数据格式：
+
+1. 数字，包含浮点数和整数
+2. 字符串，需要包裹在双引号中
+3. Bool值，true 或者 false
+4. 数组，需要包裹在方括号中 []
+5. 对象，需要包裹在大括号中 {}
+6. Null
+
+其他任何格式都会触发报错，例如 JavaScript 中的 undefined 。
+
+还需要注意的是 JSON 文件中无法使用注释，试图添加注释将会引发报错。
+
+## WXML 模板
+
+WXML 全称是 WeiXin Markup Language，是小程序框架设计的一套标签语言，结合小程序的基础组件、事件系统，可以构建出页面的结构。
+
+打开开发工具的编辑器，在根目录下找到 app.json 文件，双击打开，在 "pages/index/index" 上新增一行 "pages/wxml/index" 保存文件。模拟器刷新后，读者可以在编辑器中找到 pages/wxml/index.wxml 文件，本小结的学习通过修改这个文件来完成。
+
+### 介绍
+
+WXML 文件后缀名是 .wxml ，打开 pages/wxml/index.wxml 文件，有过 HTML 的开发经验的读者应该会很熟悉这种代码的书写方式，**简单的 WXML语句在语法上同 HTML 非常相似。**
+
+```html
+<!--pages/wxml/index.wxml-->
+
+<text>pages/wxml/index.wxml</text>
+```
+
+不带有任何逻辑功能的 WXML 基本语法如下：
+
+```html
+<!-- 在此处写注释 -->
+
+<标签名 属性名1="属性值1" 属性名2="属性值2" ...> ...</标签名>
+```
+
+一个完整的 WXML语句由一段开始标签和一段结束标签组成，在标签中可以是内容，也可以是其他的 WXML 语句，这一点上同 HTML 是一致的。有所不同的是，**WXML 要求标签必须是严格闭合的**，没有闭合将会导致编译错误。
+
+编译错误
+
+```html
+<text>hello world
+
+
+<!--
+text 没有闭合，导致编译错误：
+VM148:2 ./pages/wxml/index.wxml
+ end tag missing, near text
+> 1 | <text>hello world
+    | ^
+-->
+```
+
+标签可以拥有属性，属性提供了有关的 WXML元素更多信息。属性总是定义在开始标签中，除了一些特殊的属性外，其余属性的格式都是key="value" 的方式成对出现。需要注意的是，**WXML中的属性是大小写敏感的**，也就是说 class 和 Class 在WXML中是不同的属性，一个文本标签的示例。
+
+```html
+<!--一个简单的文本标签 -->
+<text>hello world</text>
+
+<!-- view 中包含了 text 标签 -->
+<view>
+  <text>hello world</text>
+</view>
+```
+
+带有属性的图片标签
+
+```html
+<image src="../../image/img1.png"></image>
+```
+
+### 数据绑定
+
+用户界面呈现会因为当前时刻数据不同而有所不同，或者是因为用户的操作发生动态改变，这就要求程序的运行过程中，要有动态的去改变渲染界面的能力。在 Web 开发中，开发者使用 JavaScript 通过Dom 接口来完成界面的实时更新。在小程序中，使用 WXML 语言所提供的数据绑定功能，来完成此项功能。
+
+先看一个简单的例子。
+
+将 pages/wxml/index.wxml 文件的内容做一些简单的修改，
+
+```html
+<!--pages/wxml/index.wxml-->
+<text>当前时间：{{time}}</text>
+```
+
+保存后工具刷新，模拟器并没有显示出当前的时间，这是因为我们并没有给 time 设置任何初始值，请打开 pages/wxml/index.js 文件，在 data 的大括号中加入：`time: (new Date()).toString()`。
+
+```javascript
+// pages/wxml/index.js
+Page({
+  /**
+   * 页面的初始数据
+   */
+  data: {
+    time: (new Date()).toString()
+  },
+})
+```
+
+保存，模拟器刷新后正确的展示了当前时间，并且每次编译时间都会被更新。
+
+WXML 通过 {{变量名}} 来绑定 WXML 文件和对应的 JavaScript 文件中的 data 对象属性。
+
+后文中为了保持简单，通过以下格式来展示上述的代码逻辑，使用第一段注释来表明 WXML 对应的脚本文件中的 data 结构。
+
+```html
+<!--
+{
+  time: (new Date()).toString()
+}
+-->
+<text>当前时间：{{time}}</text>
+```
+
+**属性值也可以动态的去改变**，有所不同的是**，属性值必须被包裹在双引号中**，如下：
+
+```html
+<!-- 正确的写法 -->
+<text data-test="{{test}}"> hello world</text>
+
+
+<!-- 错误的写法  -->
+<text data-test={{test}}> hello world </text >
+```
+
+**需要注意的是变量名是大小写敏感的**，也就是说 {{name}} 和 {{Name}} 是两个不同的变量。
+
+```html
+<!--
+{
+  w: 'w',
+  W: 'W'
+}
+-->
+
+
+<view>{{w}}</view>
+<view>{{W}}</view>
+
+
+<!-- 输出
+w
+W
+-->
+```
+
+还需要注意，**没有被定义的变量的或者是被设置为 undefined 的变量不会被同步到 wxml 中**
+
+```html
+<!--
+{
+  var2: undefined,
+  var3: null,
+  var4: "var4"
+}
+-->
+
+
+<view>{{var1}}</view>
+<view>{{var2}}</view>
+<view>{{var3}}</view>
+<view>{{var4}}</view>
+```
+
