--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7033,6 +7033,38 @@ console.log(result);
 
 ```
 
+## 504 七进制数
+
+给定一个整数 num，将其转化为 7 进制，并以字符串形式输出。
+
+```js
+/**
+ * @param {number} num
+ * @return {string}
+ */
+var convertToBase7 = function(num) {
+   if (num===0) {
+      return "0";
+   }
+   let flag=false;
+   if (num<0) {
+      flag=true;
+   }
+   num=Math.abs(num);
+   let ans=[];
+   while(num>0){
+      let e=num%7;
+      num=(num-e)/7;
+      ans.unshift(e);
+   }
+   return flag? "-"+ans.join("") : ans.join("");
+};
+
+let num = -7;
+let result=convertToBase7(num);
+console.log(result);
+```
+
 
 
 ## 507. 完美数
