--- a/微信小程序/小程序开发指南.md
+++ b/微信小程序/小程序开发指南.md
@@ -259,3 +259,738 @@ W
 <view>{{var4}}</view>
 ```
 
+### 逻辑语法
+
+通过 {{ 变量名 }} 语法可以使得 WXML 拥有动态渲染的能力，除此外还可以在 {{ }} 内进行简单的逻辑运算。
+
+三元运算：
+
+```html
+<!-- 根据 a 的值是否等于 10 在页面输出不同的内容 -->
+<text>{{ a === 10? "变量 a 等于10": "变量 a 不等于10"}}</text>
+```
+
+算数运算：
+
+```html
+<!--
+{ a: 1,  b: 2, c: 3 }
+-->
+
+<view> {{a + b}} + {{c}} + d </view>
+```
+
+类似于算数运算，还支持字符串的拼接
+
+```html
+<!--
+{ name: 'world' }
+-->
+
+
+<view>{{"hello " + name}}</view>
+```
+
+{{ }}中还可以直接放置数字、字符串或者是数组
+
+```html
+<text>{{[1,2,3]}}</text>
+
+<!-- 输出 1,2,3 -->
+```
+
+```html
+<text>{{"hello world"}}</text>
+
+<!-- 输出 hello world -->
+```
+
+### 条件逻辑
+
+WXML 中，使用 wx:if="{{condition}}" 来判断是否需要渲染该代码块：
+
+```html
+<view wx:if="{{condition}}"> True </view>
+```
+
+使用 wx:elif 和 wx:else 来添加一个 else 块：
+
+```html
+<view wx:if="{{length > 5}}"> 1 </view>
+<view wx:elif="{{length > 2}}"> 2 </view>
+<view wx:else> 3 </view>
+```
+
+因为 wx:if 是一个控制属性，需要将它添加到一个标签上。如果要一次性判断多个组件标签，可以使用一个 `<block/>` 标签将多个组件包装起来，并在上边使用 wx:if 控制属性。
+
+```html
+<block wx:if="{{true}}">
+  <view> view1 </view>
+  <view> view2 </view>
+</block>
+```
+
+### 列表渲染
+
+在组件上使用 wx:for 控制属性绑定一个数组，即可使用数组中各项的数据重复渲染该组件。**默认数组的当前项的下标变量名默认为 index**，**数组当前项的变量名默认为 item**
+
+```html
+<!-- array 是一个数组 -->
+<view wx:for="{{array}}">
+  {{index}}: {{item.message}}
+</view>
+```
+
+```html
+<!-- 对应的脚本文件
+Page({
+  data: {
+    array: [{
+      message: 'foo',
+    }, {
+      message: 'bar'
+    }]
+  }
+})
+-->
+```
+
+使用 wx:for-item 指定数组当前元素的变量名，使用 wx:for-index 指定数组当前下标的变量名：
+
+```html
+<view wx:for="{{array}}" wx:for-index="idx" wx:for-item="itemName">
+  {{idx}}: {{itemName.message}}
+</view>
+```
+
+类似 `block wx:if` ，也可以将 `wx:for` 用在 `<block/>` 标签上，以渲染一个包含多节点的结构块。例如：
+
+```html
+<block wx:for="{{[1, 2, 3]}}">
+  <view> {{index}}: </view>
+  <view> {{item}} </view>
+</block>
+```
+
+```html
+<view>
+  <text>Hello World</text>
+</view>
+<text>当前时间：{{time}}</text>
+<image src="../../image/img1.png"></image>
+
+<view wx:if="{{n>80}}">A</view>
+<view wx:elif="{{n>60}}">B</view>
+<view wx:else>C</view>
+
+<block wx:for="{{arrs}}">
+  <view>{{index}}-{{item.id}}-{{item.val}}</view>
+</block>
+
+
+```
+
+如果列表中项目的位置会动态改变或者有新的项目添加到列表中，并且希望列表中的项目保持自己的特征和状态（如 `<input/>` 中的输入内容， `<switch/>` 的选中状态），**需要使用 `wx:key` 来指定列表中项目的唯一的标识符。**
+
+`wx:key` 的值以两种形式提供：
+
+1. 字符串，代表在 for 循环的 array 中 item 的某个 property，该 property 的值需要是列表中唯一的字符串或数字，且不能动态改变。
+2. 保留关键字 this 代表在 for 循环中的 item 本身，这种表示需要 item 本身是一个唯一的字符串或者数字，如：
+
+**当数据改变触发渲染层重新渲染的时候，会校正带有 key 的组件**，框架会确保他们被重新排序，而不是重新创建，以确保使组件保持自身的状态，并且提高列表渲染时的效率。
+
+使用 wx:key 示例（WXML）
+
+```html
+<switch wx:for="{{objectArray}}" wx:key="unique" > {{item.id}} </switch>
+<button bindtap="switch"> Switch </button>
+<button bindtap="addToFront"> Add to the front </button>
+
+<switch wx:for="{{numberArray}}" wx:key="*this" > {{item}} </switch>
+<button bindtap="addNumberToFront"> Add Number to the front </button>
+```
+
+使用 wx:key 示例（JavaScript）
+
+```javascript
+Page({
+  data: {
+    objectArray: [
+      {id: 5, unique: 'unique_5'},
+      {id: 4, unique: 'unique_4'},
+      {id: 3, unique: 'unique_3'},
+      {id: 2, unique: 'unique_2'},
+      {id: 1, unique: 'unique_1'},
+      {id: 0, unique: 'unique_0'},
+    ],
+    numberArray: [1, 2, 3, 4]
+  },
+  switch: function(e) {
+    const length = this.data.objectArray.length
+    for (let i = 0; i < length; ++i) {
+      const x = Math.floor(Math.random() * length)
+      const y = Math.floor(Math.random() * length)
+      const temp = this.data.objectArray[x]
+      this.data.objectArray[x] = this.data.objectArray[y]
+      this.data.objectArray[y] = temp
+    }
+    this.setData({
+      objectArray: this.data.objectArray
+    })
+  },
+  addToFront: function(e) {
+    const length = this.data.objectArray.length
+    this.data.objectArray = [{id: length, unique: 'unique_' + length}].concat(this.data.objectArray)
+    this.setData({
+      objectArray: this.data.objectArray
+    })
+  },
+  addNumberToFront: function(e){
+    this.data.numberArray = [ this.data.numberArray.length + 1 ].concat(this.data.numberArray)
+    this.setData({
+      numberArray: this.data.numberArray
+    })
+  }
+})
+```
+
+WXML提供模板（template），可以在模板中定义代码片段，然后在不同的地方调用。**使用 name 属性，作为模板的名字。然后在 `<template/>` 内定义代码片段**，如：
+
+ 定义模板
+
+```html
+<template name="msgItem">
+  <view>
+    <text> {{index}}: {{msg}} </text>
+    <text> Time: {{time}} </text>
+  </view>
+</template>
+```
+
+**使用 is 属性，声明需要的使用的模板**，然后将模板所需要的 data 传入，
+
+模板使用示例
+
+```js
+data:{
+    item: {
+      index: 0,
+      msg: 'this is a template',
+      time: (new Date()).toLocaleTimeString(),
+    }
+  },
+```
+
+```html
+<template is="msgItem" data="{{...item}}"/>
+```
+
+**is可以动态决定具体需要渲染哪个模板**
+
+```html
+<template name="odd">
+  <view> odd </view>
+</template>
+
+
+<template name="even">
+  <view> even </view>
+</template>
+
+
+<block wx:for="{{[1, 2, 3, 4, 5]}}">
+  <template is="{{item % 2 == 0 ? 'even' : 'odd'}}"/>
+</block>
+```
+
+### 引用
+
+WXML 提供两种文件引用方式import和include。
+
+#### import
+
+import 可以在该文件中使用目标文件定义的 template，如：
+
+在 item.wxml 中定义了一个叫 item的 template ：
+
+```html
+<!-- item.wxml -->
+<template name="item">
+  <text>{{text}}</text>
+</template>
+```
+
+在 index.wxml 中引用了 item.wxml，就可以使用 item模板：
+
+```html
+<import src="item.wxml"/>
+
+<template is="item" data="{{text: 'forbar'}}"/>
+```
+
+需要注意的是 import 有作用域的概念，即只会 import 目标文件中定义的 template，而不会 import 目标文件中 import 的 template，简言之就是 import 不具有递归的特性。
+
+例如：C 引用 B，B 引用A，在C中可以使用B定义的 template，在B中可以使用A定义的 template ，但是C不能使用A定义的template
+
+模板 A
+
+```html
+<!-- A.wxml -->
+<template name="A">
+  <text> A template </text>
+</template>
+```
+
+模板 B
+
+```html
+<!-- B.wxml -->
+<import src="a.wxml"/>
+
+<template name="B">
+  <text> B template </text>
+</template>
+```
+
+模板 C
+
+```html
+<!-- C.wxml -->
+<import src="b.wxml"/>
+
+<template is="A"/>  <!-- 这里将会触发一个警告，因为 b 中并没有定义模板 A -->
+
+<template is="B"/>
+```
+
+####  include
+
+include 可以将目标文件中除了 `<template/> <wxs/>` 外的**整个**代码引入，**相当于是拷贝到 include 位置**
+
+```html
+<!-- index.wxml -->
+<include src="header.wxml"/>
+
+<view> body </view>
+
+<include src="footer.wxml"/>
+```
+
+```html
+<!-- header.wxml -->
+<view> header </view>
+```
+
+```html
+<!-- footer.wxml -->
+<view> footer </view>
+```
+
+### 共同属性
+
+所有wxml 标签都支持的属性称之为共同属性
+
+| **属性名**   | **类型**     | **描述**       | **注解**                                 |
+| :----------- | :----------- | :------------- | :--------------------------------------- |
+| id           | String       | 组件的唯一标识 | 整个页面唯一                             |
+| class        | String       | 组件的样式类   | 在对应的 WXSS 中定义的样式类             |
+| style        | String       | 组件的内联样式 | 可以动态设置的内联样式                   |
+| hidden       | Boolean      | 组件是否显示   | 所有组件默认显示                         |
+| data-*       | Any          | 自定义属性     | 组件上触发的事件时，会发送给事件处理函数 |
+| bind*/catch* | EventHandler | 组件的事件     |                                          |
+
+
+
+## WXSS 样式
+
+WXSS（WeiXin Style Sheets）是一套用于小程序的样式语言，用于描述WXML的组件样式，也就是视觉上的效果。
+
+WXSS与Web开发中的CSS类似。为了更适合小程序开发，WXSS对CSS做了一些补充以及修改。
+
+### 文件组成
+
+- 项目公共样式：根目录中的app.wxss为项目公共样式，它会被注入到小程序的每个页面。
+
+- 页面样式：与app.json注册过的页面同名且位置同级的WXSS文件。
+
+- 其它样式：其它样式可以被项目公共样式和页面样式引用
+
+
+
+在小程序开发中，开发者不需要像Web开发那样去优化样式文件的请求数量，只需要考虑代码的组织即可。样式文件最终会被编译优化，具体的编译原理我们留在后面章节再做介绍。
+
+### 尺寸单位
+
+在WXSS中，引入了**rpx（responsive pixel）尺寸单位**。引用新尺寸单位的目的是，适配不同宽度的屏幕，开发起来更简单。
+
+同一个元素，在不同宽度的屏幕下，如果使用px为尺寸单位，有可能造成页面留白过多。
+
+小程序编译后，**rpx会做一次px换算。换算是以375个物理像素为基准**，也就是在一个宽度为375物理像素的屏幕下，1rpx = 1px。
+
+举个例子：iPhone6屏幕宽度为375px，共750个物理像素，那么1rpx = 375 / 750 px = 0.5px。
+
+### WXSS引用
+
+**在CSS中，开发者可以这样引用另一个样式文件**：`@import url('./test_0.css')`
+
+这种方法在请求上不会把test_0.css合并到index.css中，也就是请求index.css的时候，会多一个test_0.css的请求。
+
+在小程序中，我们依然可以实现样式的引用，样式引用是这样写：
+
+```css
+@import './test_0.wxss'
+```
+
+由于WXSS最终会被编译打包到目标文件中，用户只需要下载一次，在使用过程中不会因为样式的引用而产生多余的文件请求。
+
+### 内联样式
+
+WXSS内联样式与Web开发一致:
+
+```html
+<!--index.wxml-->
+
+<!--内联样式-->
+<view style="color: red; font-size: 48rpx"></view>
+```
+
+小程序支持动态更新内联样式：
+
+```html
+<!--index.wxml-->
+
+<!--可动态变化的内联样式-->
+<!--
+{
+  eleColor: 'red',
+  eleFontsize: '48rpx'
+}
+-->
+<view style="color: {{eleColor}}; font-size: {{eleFontsize}}"></view>
+```
+
+### 选择器
+
+目前支持的选择器如表2-2所示。
+
+表2-2 小程序WXSS支持的选择器
+
+| **类型**     | **选择器** | **样例**      | **样例描述**                                   |
+| :----------- | :--------- | :------------ | :--------------------------------------------- |
+| 类选择器     | .class     | .intro        | 选择所有拥有 class="intro" 的组件              |
+| id选择器     | #id        | #firstname    | 选择拥有 id="firstname" 的组件                 |
+| 元素选择器   | element    | view checkbox | 选择所有文档的 view 组件和所有的 checkbox 组件 |
+| 伪元素选择器 | ::after    | view::after   | 在 view 组件后边插入内容                       |
+| 伪元素选择器 | ::before   | view::before  | 在 view 组件前边插入内容                       |
+
+WXSS优先级与CSS类似，权重如图2-13所示。
+
+![cssweight](E:\pogject\学习笔记\image\js\cssweight.png)
+
+权重越高越优先。**在优先级相同的情况下，后设置的样式优先级高于先设置的样式**。
+
+WXSS 选择器优先级权重
+
+```css
+view{ // 权重为 1
+  color: blue
+}
+
+.ele{ // 权重为 10
+  color: red
+}
+
+#ele{ // 权重为 100
+  color: pink
+}
+
+view#ele{ // 权重为 1 + 100 = 101，优先级最高，元素颜色为orange
+  color: orange
+}
+
+view.ele{ // 权重为 1 + 10 = 11
+  color: green
+}
+```
+
+### 官方样式库
+
+为了减轻开发者样式开发的工作量，我们提供了WeUI.wxss基础样式库。
+
+WeUI是一套与微信原生视觉体验一致的基础样式库，由微信官方设计团队为微信内网页和微信小程序量身设计，令用户的使用感知更加统一。包含button、cell、dialog、progress、toast、article、actionsheet、icon等各式原生。
+
+具体使用文档可参考：https://github.com/Tencent/weui-wxss
+
+## JavaScript 脚本
+
+小程序的主要开发语言是 JavaScript ，开发者使用 JavaScript 来开发业务逻辑以及调用小程序的 API 来完成业务需求。
+
+### ECMAScript
+
+在大部分开发者看来，ECMAScript和JavaScript表达的是同一种含义，但是严格的说，两者的意义是不同的。ECMAScript是一种由Ecma国际通过ECMA-262标准化的脚本程序设计语言， JavaScript 是 ECMAScript 的一种实现。理解 JavaScript 是 ECMAScript 一种实现后，可以帮助开发者理解小程序中的 JavaScript同浏览器中的 JavaScript 以及 NodeJS 中的 JavaScript 是不相同的。
+
+ECMA-262 规定了 ECMAScript 语言的几个重要组成部分：
+
+1. 语法
+2. 类型
+3. 语句
+4. 关键字
+5. 操作符
+6. 对象
+
+#### 浏览器中的JavaScript
+
+浏览器中的JavaScript 是由 ECMAScript 和 BOM（浏览器对象模型）以及 DOM（文档对象模型）组成的，Web前端开发者会很熟悉这两个对象模型，它使得开发者可以去操作浏览器的一些表现，比如修改URL、修改页面呈现、记录数据等等。
+
+#### NodeJS中的JavaScript 
+
+NodeJS中的JavaScript 是由 ECMAScript 和 NPM以及Native模块组成，NodeJS的开发者会非常熟悉 NPM 的包管理系统，通过各种拓展包来快速的实现一些功能，同时通过使用一些原生的模块例如 FS、HTTP、OS等等来拥有一些语言本身所不具有的能力。
+
+#### 小程序中的 JavaScript 
+
+小程序中的 JavaScript 是由ECMAScript 以及小程序框架和小程序 API 来实现的。同浏览器中的JavaScript 相比没有 BOM 以及 DOM 对象，所以类似 JQuery、Zepto这种浏览器类库是无法在小程序中运行起来的，同样的缺少 Native 模块和NPM包管理的机制，小程序中无法加载原生库，也无法直接使用大部分的 NPM 包。
+
+### 小程序的执行环境
+
+明白了小程序中的 JavaScript 同浏览器以及NodeJS有所不同后，开发者还需要注意到另外一个问题，不同的平台的小程序的脚本执行环境也是有所区别的。
+
+小程序目前可以运行在三大平台：
+
+1. iOS平台，包括iOS9、iOS10、iOS11
+2. Android平台
+3. 小程序IDE
+
+这种区别主要是体现三大平台实现的 ECMAScript 的标准有所不同。截止到当前一共有七个版本的ECMAScript 标准，目前开发者大部分使用的是 ECMAScript 5 和 ECMAScript 6 的标准，但是在小程序中， iOS9和iOS10 所使用的运行环境并没有完全的兼容到 ECMAScript 6 标准，一些 ECMAScript 6 中规定的语法和关键字是没有的或者同标准是有所不同的，例如：
+
+1. 箭头函数
+2. let const
+3. 模板字符串
+4. …
+
+所以一些开发者会发现有些代码在旧的手机操作系统上出现一些语法错误。为了帮助开发者解决这类问题，小程序IDE提供语法转码工具帮助开发者，将 ECMAScript 6代码转为 ECMAScript 5代码，从而在所有的环境都能得到很好的执行。
+
+开发者需要在项目设置中，勾选 ES6 转 ES5 开启此功能。
+
+### 模块化
+
+浏览器中，所有 JavaScript 是在运行在同一个作用域下的，定义的参数或者方法可以被后续加载的脚本访问或者改写。同浏览器不同，小程序中可以将任何一个JavaScript 文件作为一个模块，通过module.exports 或者 exports 对外暴露接口。
+
+请看是一个简单模块示例，B.js 引用模块A，并使用A暴露的multiplyBy2方法完成一个变量乘以 2 的操作。
+
+```javascript
+// moduleA.js
+module.exports = function( value ){
+  return value * 2;
+}
+```
+
+```javascript
+// B.js
+
+// 在B.js中引用模块A
+var multiplyBy2 = require('./moduleA')
+var result = multiplyBy2(4)
+```
+
+在需要使用这些模块的文件中，使用 require(path) 将公共代码引入
+
+```javascript
+var common = require('common.js')
+Page({
+  helloMINA: function() {
+    common.sayHello('MINA')
+  },
+  goodbyeMINA: function() {
+    common.sayGoodbye('MINA')
+  }
+})
+```
+
+### 脚本的执行顺序
+
+浏览器中，脚本严格按照加载的顺序执行，
+
+浏览器中的脚本
+
+```html
+<html>
+<head>
+  <!-- a.js
+  console.log('a.js')
+   -->
+  <script src ="a.js"></script>
+  <script>
+    console.log('inline script')
+  </script>
+
+  <!-- b.js
+  console.log('b.js')
+   -->
+  <script src ="b.js"></script>
+</head>
+</html>
+```
+
+以上代码的输出是：
+
+```
+a.js
+
+inline script
+
+b.js
+```
+
+
+
+而在小程序中的脚本执行顺序有所不同。**小程序的执行的入口文件是 app.js 。并且会根据其中 require 的模块顺序决定文件的运行顺序，**
+
+ app.js
+
+```javascript
+/* a.js
+console.log('a.js')
+*/
+var a = require('./a.js')
+console.log('app.js')
+
+/* b.js
+console.log('b.js')
+*/
+var b = require('./b.js')
+```
+
+以上代码的输出顺序是：
+
+```
+a.js
+
+app.js
+
+b.js
+```
+
+**当 app.js 执行结束后，小程序会按照开发者在 app.json 中定义的 pages 的顺序，逐一执行**。
+
+app.json 文件
+
+```json
+{
+  "pages": [
+    "pages/index/index",
+    "pages/log/log",
+    "pages/result/result"
+  ],
+  "window": {}
+}
+```
+
+```javascript
+// app.js
+console.log('app.js')
+```
+
+```javascript
+// pages/index/index
+console.log('pages/index/index')
+```
+
+```javascript
+// pages/log/log
+console.log('pages/log/log')
+```
+
+```javascript
+// pages/result/result
+console.log('pages/result/result')
+```
+
+以上文件执行后输出的结果如下：
+
+```
+app.js
+
+pages/index/index
+
+pages/log/log
+
+pages/result/result
+```
+
+### 作用域
+
+同浏览器中运行的脚本文件有所不同，**小程序的脚本的作用域同 NodeJS 更为相似。**
+
+在文件中声明的变量和函数只在该文件中有效，不同的文件中可以声明相同名字的变量和函数，不会互相影响
+
+在脚本 a.js 中定义局部变量
+
+```javascript
+// a.js
+// 定义局部变量
+var localValue = 'a'
+```
+
+脚本 b.js 中无法访问 a.js 定义的变量
+
+```javascript
+// b.js
+// 定义局部变量
+console.log(localValue) // 触发一个错误 b.js中无法访问 a.js 中定义的变量
+```
+
+当需要使用全局变量的时，通过使用全局函数 getApp() 获取全局的实例，并设置相关属性值，来达到设置全局变量的目的
+
+在脚本 a.js 中设置全局变量
+
+```javascript
+// a.js
+// 获取全局变量
+var global = getApp()
+global.globalValue = 'globalValue'
+```
+
+在脚本 b.js 中访问 a.js 定义的全局变量
+
+```javascript
+// b.js
+// 访问全局变量
+var global = getApp()
+console.log(global.globalValue) // 输出 globalValue
+```
+
+需要注意的是，上述示例只有在 a.js 比 b.js 先执行才有效，当需要保证全局的数据可以在任何文件中安全的被使用到，那么可以在 App() 中进行设置
+
+定义全局变量
+
+```javascript
+// app.js
+App({
+  globalData: 1
+})
+```
+
+获取以及修改 global 变量的方法
+
+```javascript
+// a.js
+// 局部变量
+var localValue = 'a'
+
+// 获取 global 变量
+var app = getApp()
+
+// 修改 global 变量
+app.globalData++  // 执行后 globalData 数值为 2
+```
+
+获取 global 变量
+
+```javascript
+// b.js
+// 定义另外的局部变量，并不会影响 a.js 中文件变量
+var localValue = 'b'
+
+// 如果先执行了 a.js 这里的输出应该是 2
+console.log(getApp().globalData)
+```
