--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9661,6 +9661,68 @@ let result=construct2DArray(str1,2,2);
 console.log(result);
 ```
 
+## 2055. 蜡烛之间的盘子
+
+给你一个长桌子，桌子上盘子和蜡烛排成一列。给你一个下标从 0 开始的字符串 s ，它只包含字符 '*' 和 '|' ，其中 '*' 表示一个 盘子 ，'|' 表示一支 蜡烛 。
+
+同时给你一个下标从 0 开始的二维整数数组 queries ，其中 queries[i] = [lefti, righti] 表示 子字符串 s[lefti...righti] （包含左右端点的字符）。对于每个查询，你需要找到 子字符串中 在 两支蜡烛之间 的盘子的 数目 。如果一个盘子在 子字符串中 左边和右边 都 至少有一支蜡烛，那么这个盘子满足在 两支蜡烛之间 。
+
+比方说，s = "||**||**|*" ，查询 [3, 8] ，表示的是子字符串 "*||**|" 。子字符串中在两支蜡烛之间的盘子数目为 2 ，子字符串中右边两个盘子在它们左边和右边 都 至少有一支蜡烛。
+请你返回一个整数数组 answer ，其中 answer[i] 是第 i 个查询的答案。
+
+提示：
+
+3 <= s.length <= 105
+s 只包含字符 '*' 和 '|' 。
+1 <= queries.length <= 105
+queries[i].length == 2
+0 <= lefti <= righti < s.length
+
+```js
+/**
+ * @param {string} s
+ * @param {number[][]} queries
+ * @return {number[]}
+ */
+var platesBetweenCandles = function(s, queries) {
+   let ans=new Array(queries.length).fill(0);
+   let n=s.length;
+   const preSum=new Array(n).fill(0);
+   for(let i=0,sum=0;i<n;i++){
+      if (s[i]==="*") {
+         sum++;
+      }
+      preSum[i]=sum;
+   }
+   const left=new Array(n).fill(0);
+   for(let i=0,l=-1;i<n;i++){
+      if (s[i]==="|") {
+         l=i;
+      }
+      left[i]=l;
+   }
+   const right=new Array(n).fill(0);
+   for(let i=n-1,r=-1;i>=0;i--){
+      if (s[i]==="|") {
+         r=i;
+      }
+      right[i]=r;
+   }
+   for(let i=0;i<queries.length;i++){
+      let x=right[queries[i][0]];
+      let y=left[queries[i][1]];
+      ans[i]=x===-1 || y===-1 || x>=y ? 0: preSum[y]-preSum[x];
+   }
+   return ans;
+};
+
+let s = "**|**|***|", queries = [[2,5],[5,9]];
+let result=platesBetweenCandles(s,queries);
+console.log(result);
+```
+
+
+
 ## 2100. 适合打劫银行的日子
 
 你和一群强盗准备打劫银行。给你一个下标从 0 开始的整数数组 security ，其中 security[i] 是第 i 天执勤警卫的数量。日子从 0 开始编号。同时给你一个整数 time 。
