--- a/微信小程序/小程序开发指南.md
+++ b/微信小程序/小程序开发指南.md
@@ -998,3 +998,359 @@ console.log(getApp().globalData)
 
 
 # 理解小程序宿主环境
+
+##  渲染层和逻辑层
+
+小程序的运行环境分成渲染层和逻辑层，第2章提到过 WXML 模板和 WXSS 样式工作在渲染层，JS 脚本工作在逻辑层。小程序的渲染层和逻辑层分离是经过很多考虑得出来的模型
+
+### 渲染“Hello World”页面
+
+我们看看小程序是如何把脚本里边的数据渲染在界面上的。
+WXML模板使用 view 标签，其子节点用 {{ }} 的语法绑定一个 msg 的变量
+
+```html
+<view>{{ msg }}</view>
+```
+
+在 JS 脚本使用 this.setData 方法把 msg 字段设置成 “Hello World”
+
+```javascript
+Page({
+  onLoad: function () {
+    this.setData({ msg: 'Hello World' })
+  }
+})
+```
+
+从这个例子我们可以看到3个点：
+1.渲染层和数据相关。
+2.逻辑层负责产生、处理数据。
+3.逻辑层通过 Page 实例的 setData 方法传递数据到渲染层。
+关于第1点，涉及了“数据驱动”的概念，我们会在3.1.3节详细讨论，我们现在先看看第3点涉及的“通信模型”。
+
+### 通信模型
+
+小程序的渲染层和逻辑层分别由2个线程管理：渲染层的界面使用了WebView 进行渲染；逻辑层采用JsCore线程运行JS脚本。一个小程序存在多个界面，所以渲染层存在多个WebView线程，这两个线程的通信会经由微信客户端（下文中也会采用Native来代指微信客户端）做中转，逻辑层发送网络请求也经由Native转发，小程序的通信模型如图3-1所示。
+
+![通信模型](E:\pogject\学习笔记\image\js\通信模型.png)
+
+### 数据驱动
+
+在开发UI界面过程中，程序需要维护很多变量状态，同时要操作对应的UI元素。随着界面越来越复杂，我们需要维护很多变量状态，同时要处理很多界面上的交互事件，整个程序变得越来越复杂。通常界面视图和变量状态是相关联的，如果有某种“方法”可以让状态和视图绑定在一起（状态变更时，视图也能自动变更），那我们就可以省去手动修改视图的工作。
+这个方法就是“数据驱动”，下边我们来介绍一下小程序的数据驱动基本原理。
+WXML结构实际上等价于一棵Dom树，通过一个JS对象也可以来表达Dom树的结构
+
+WXML可以先转成JS对象，然后再渲染出真正的Dom树
+
+通过setData把msg数据从“Hello World”变成“Goodbye”，产生的JS对象对应的节点就会发生变化，此时可以对比前后两个JS对象得到变化的部分，然后把这个差异应用到原来的Dom树上，从而达到更新UI的目的，这就是“数据驱动”的原理
+
+### 双线程下的界面渲染
+
+小程序的逻辑层和渲染层是分开的两个线程。在**渲染层**，宿主环境会把WXML转化成对应的JS对象，在**逻辑层**发生数据变更的时候，我们需要通过宿主环境提供的setData方法把数据从逻辑层传递到渲染层，再经过对比前后差异，把差异应用在原来的Dom树上，渲染出正确的UI界面。
+
+## 程序与页面
+
+从逻辑组成来说，一个小程序是由多个“页面”组成的“程序”。这里要区别一下“小程序”和“程序”的概念，往往我们需要在“程序”启动或者退出的时候存储数据或者在“页面”显示或者隐藏的时候做一些逻辑处理，了解程序和页面的概念以及它们的生命周期是非常重要的。
+
+### 程序
+
+“小程序”指的是产品层面的程序，而“程序”指的是代码层面的程序实例，为了避免误解，下文采用App来代替代码层面的“程序”概念。
+
+#### 程序构造器App()
+
+宿主环境提供了 App() 构造器用来注册一个程序App，需要留意的是**App() 构造器必须写在项目根目录的app.js里**，**App实例是单例对象**，在其他JS脚本中可以使用宿主环境提供的 getApp() 来获取程序实例。
+
+getApp() 获取App实例
+
+```javascript
+// other.js
+var appInstance = getApp()
+```
+
+App() 的调用方式如代码清单3-4所示，App构造器接受一个Object参数，参数说明如表3-1所示，其中onLaunch / onShow / onHide 三个回调是App实例的生命周期函数，我们会在后文展开；
+
+App构造器
+
+```javascript
+App({
+  onLaunch: function(options) {},
+  onShow: function(options) {},
+  onHide: function() {},
+  onError: function(msg) {},
+  globalData: 'I am global data'
+})
+```
+
+| 参数属性 | 类型     | 描述                                                         |
+| :------- | :------- | :----------------------------------------------------------- |
+| onLaunch | Function | 当小程序初始化完成时，会触发 onLaunch（全局只触发一次）      |
+| onShow   | Function | 当小程序启动，或从后台进入前台显示，会触发 onShow            |
+| onHide   | Function | 当小程序从前台进入后台，会触发 onHide                        |
+| onError  | Function | 当小程序发生脚本错误，或者 API 调用失败时，会触发 onError 并带上错误信息 |
+| 其他字段 | 任意     | 可以添加任意的函数或数据到 Object 参数中，在App实例回调用 this 可以访问 |
+
+#### 程序的生命周期和打开场景
+
+初次进入小程序的时候，微信客户端初始化好宿主环境，同时从网络下载或者从本地缓存中拿到小程序的代码包，把它注入到宿主环境，初始化完毕后，微信客户端就会给App实例派发onLaunch事件，App构造器参数所定义的onLaunch方法会被调用。
+
+进入小程序之后，用户可以点击右上角的关闭，或者按手机设备的Home键离开小程序，此时小程序并没有被直接销毁，我们把这种情况称为“**小程序进入后台状态**”，App构造器参数所定义的onHide方法会被调用。
+当再次回到微信或者再次打开小程序时，微信客户端会把“后台”的小程序唤醒，我们把这种情况称为“**小程序进入前台状态**”，App构造器参数所定义的onShow方法会被调用。
+我们可以看到，App的生命周期是由微信客户端根据用户操作主动触发的。为了避免程序上的混乱，我们不应该从其他代码里主动调用App实例的生命周期函数。
+
+在微信客户端中打开小程序有很多途径：从群聊会话里打开，从小程序列表中打开，通过微信扫一扫二维码打开，从另外一个小程序打开当前小程序等，针对不同途径的打开方式，小程序有时需要做不同的业务处理，所以微信客户端会把打开方式带给onLaunch和onShow的调用参数options，示例代码以及详细参数如代码清单3-5和表3-2所示。需要留意小程序的宿主环境在迭代更新过程会增加不少打开场景，因此要获取最新的场景值说明请查看官方文档：https://mp.weixin.qq.com/debug/wxadoc/dev/framework/app-service/app.html。
+
+onLaunch和onShow带参数
+
+```javascript
+App({
+  onLaunch: function(options) { console.log(options) },
+  onShow: function(options) { console.log(options) }
+})
+```
+
+#### 小程序全局数据
+
+我们在 3.1.2节说到小程序的JS脚本是运行在JsCore的线程里，小程序的每个页面各自有一个WebView线程进行渲染，所以小程序切换页面时，小程序逻辑层的JS脚本运行上下文依旧在同一个JsCore线程中。
+
+在上文中说道App实例是单例的，因此不同页面直接可以通过App实例下的属性来共享数据。App构造器可以传递其他参数作为全局属性以达到全局共享数据的目的。
+
+小程序全局共享数据
+
+```javascript
+// app.js
+App({
+  globalData: 'I am global data' // 全局共享数据
+})
+// 其他页面脚本other.js
+var appInstance = getApp()
+console.log(appInstance.globalData) // 输出: I am global data
+```
+
+与此同时，我们要特别留意一点，所有页面的脚本逻辑都跑在同一个JsCore线程，页面使用setTimeout或者setInterval的定时器，然后跳转到其他页面时，这些定时器并没有被清除，**需要开发者自己在页面离开的时候进行清理。**
+
+### 页面
+
+一个小程序可以有很多页面，**每个页面承载不同的功能，页面之间可以互相跳转**。为了叙述简洁，我们之后讨论所涉及的“页面”概念特指“小程序页面”。
+
+一个页面是分三部分组成：**界面、配置和逻辑**。界面由WXML文件和WXSS文件来负责描述，配置由JSON文件进行描述，页面逻辑则是由JS脚本文件负责。一个页面的文件需要放置在同一个目录下，其中WXML文件和JS文件是必须存在的，JSON和WXSS文件是可选的。
+
+页面路径需要在小程序代码根目录app.json中的pages字段声明，否则这个页面不会被注册到宿主环境中。例如两个页面的文件的相对路径分别为 pages/index/page. *和 pages/other/other.* (*表示wxml/wxss/json/js四个文件)，在app.json的pages字段的代码路径需要去除.*后缀，如代码清单3-7所示，默认pages字段的第一个页面路径为小程序的首页。
+
+app.json声明页面路径
+
+```javascript
+{
+  "pages":[
+    "pages/index/page", // 第一项默认为首页
+    "pages/other/other"
+  ]
+}
+```
+
+为了叙述方便，下文使用page.wxml / page.wxss / page.json / page.js 来分别代表特定页面的4个文件。
+
+#### 页面构造器Page()
+
+宿主环境提供了 Page() 构造器用来注册一个小程序页面，Page()在页面脚本page.js中调用，Page() 的调用方式如代码清单3-8所示。Page构造器接受一个Object参数，参数说明如表3-4所示，其中data属性是当前页面WXML模板中可以用来做数据绑定的初始数据，我们会在后文展开讨论；onLoad / onReady / onShow / onHide /onUnload 5个回调是Page实例的生命周期函数，我们在后文展开；onPullDownRefresh / onReachBottom / onShareAppMessage / onPageScroll 4个回调是页面的用户行为，我们也会在后文展开。
+
+```javascript
+Page({
+  data: { text: "This is page data." },  //页面的初始数据
+  onLoad: function(options) { },//生命周期函数--监听页面加载，触发时机早于onShow和onReady
+  onReady: function() { },//生命周期函数--监听页面初次渲染完成
+  onShow: function() { },//监听页面显示，触发事件早于onReady
+  onHide: function() { },//监听页面隐藏
+  onUnload: function() { },//监听页面卸载
+  onPullDownRefresh: function() { },//页面相关事件处理函数--监听用户下拉动作
+  onReachBottom: function() { },//页面上拉触底事件的处理函数
+  onShareAppMessage: function () { },//用户点击右上角转发
+  onPageScroll: function() { }//页面滚动触发事件的处理函数
+    //可以添加任意的函数或数据，在Page实例的其他函数中用 this 可以访问
+})
+```
+
+#### 页面的生命周期和打开参数
+
+页面初次加载的时候，微信客户端就会给Page实例派发onLoad事件，Page构造器参数所定义的onLoad方法会被调用，onLoad在页面没被销毁之前只会触发1次，在onLoad的回调中，可以获取当前页面所调用的打开参数option，关于打开参数我们放在这一节的最后再展开阐述。
+
+页面显示之后，Page构造器参数所定义的onShow方法会被调用，一般从别的页面返回到当前页面时，当前页的onShow方法都会被调用。
+
+在页面初次渲染完成时，Page构造器参数所定义的onReady方法会被调用，onReady在页面没被销毁前只会触发1次，onReady触发时，表示页面已经准备妥当，在逻辑层就可以和视图层进行交互了。
+以上三个事件触发的时机是**onLoad早于 onShow，onShow早于onReady**。
+
+页面不可见时，Page构造器参数所定义的onHide方法会被调用，这种情况会在使用wx.navigateTo切换到其他页面、底部tab切换时触发。
+
+当前页面使用wx.redirectTo或wx.navigateBack返回到其他页时，当前页面会被微信客户端销毁回收，此时Page构造器参数所定义的onUnload方法会被调用。
+
+我们可以看到，Page的生命周期是由微信客户端根据用户操作主动触发的。为了避免程序上的混乱，我们不应该在其他代码中主动调用Page实例的生命周期函数。
+
+最后我们说一下页面的打开参数query，让我们来设想这样一个场景，我们实现一个购物商城的小程序，我们需要完成一个商品列表页和商品详情页，点击商品列表页的商品就可以跳转到该商品的详情页，当然我们不可能为每个商品单独去实现它的详情页。我们只需要实现一个商品详情页的pages/detail/detail.*(代表WXML/WXSS/JS/JSON文件)*即可，在列表页打开商品详情页时把商品的id传递过来，详情页通过刚刚说的onLoad回调的参数option就可以拿到商品id，从而绘制出对应的商品.
+
+页面的打开参数Page构造器
+
+```javascript
+// pages/list/list.js
+// 列表页使用navigateTo跳转到详情页
+wx.navigateTo({ url: 'pages/detail/detail?id=1&other=abc' })
+
+// pages/detail/detail.js
+Page({
+  onLoad: function(option) {
+        console.log(option.id)
+        console.log(option.other)
+  }
+})
+```
+
+小程序把页面的打开路径定义成页面URL，其组成格式和网页的URL类似，在页面路径后使用英文 ? 分隔path和query部分，query部分的多个参数使用 & 进行分隔，参数的名字和值使用 key=value 的形式声明。在页面Page构造器里onLoad的option可以拿到当前页面的打开参数，其类型是一个Object，其键值对与页面URL上query键值对一一对应。**和网页URL一样，页面URL上的value如果涉及特殊字符（例如：&字符、?字符、中文字符等，详情参考URI的RFC3986说明 ），需要采用UrlEncode后再拼接到页面URL上。**
+
+#### 页面的数据
+
+我们知道小程序的页面结构由WXML进行描述，WXML可以通过数据绑定的语法绑定从逻辑层传递过来的数据字段，这里所说的数据其实就是来自于页面Page构造器的data字段，data参数是页面第一次渲染时从逻辑层传递到渲染层的数据。
+
+ Page构造器的data参数
+
+```html
+<!-- page.wxml -->
+<view>{{text}}</view>
+<view>{{array[0].msg}}</view>
+
+// page.js
+Page({
+  data: {
+    text: 'init data',
+    array: [{msg: '1'}, {msg: '2'}]
+  }
+})
+```
+
+宿主环境所提供的Page实例的原型中有setData函数，我们可以在Page实例下的方法调用this.setData把数据传递给渲染层，从而达到更新界面的目的。由于小程序的渲染层和逻辑层分别在两个线程中运行，所以setData传递数据实际是一个异步的过程，所以setData的第二个参数是一个callback回调，在这次setData对界面渲染完毕后触发。
+setData其一般调用格式是 setData(data, callback)，其中data是由多个key: value构成的Object对象。
+
+使用setData更新渲染层数据
+
+```javascript
+// page.js
+Page({
+  onLoad: function(){
+    this.setData({
+      text: 'change data'
+    }, function(){
+      // 在这次setData对界面渲染完毕后触发
+    })
+  }
+})
+```
+
+实际在开发的时候，页面的data数据会涉及相当多的字段，你并不需要每次都将整个data字段重新设置一遍，你只需要把改变的值进行设置即可，宿主环境会自动把新改动的字段合并到渲染层对应的字段中，如下代码所示。data中的key还可以非常灵活，以数据路径的形式给出，例如 this.setData({"d[0]": 100}); this.setData({"d[1].text": 'Goodbye'}); 我们只要保持一个原则就可以提高小程序的渲染性能：**每次只设置需要改变的最小单位数据**。
+
+使用setData更新渲染层数据
+
+```javascript
+// page.js
+Page({
+  data: {
+    a: 1, b: 2, c: 3,
+    d: [1, {text: 'Hello'}, 3, 4]
+  }
+  onLoad: function(){
+       // a需要变化时，只需要setData设置a字段即可
+    this.setData({a : 2})
+  }
+})
+```
+
+此外需要注意以下3点：
+
+1. 直接修改 Page实例的this.data 而不调用 this.setData 是无法改变页面的状态的，还会造成数据不一致。
+2. 由于setData是需要两个线程的一些通信消耗，为了提高性能，每次设置的数据不应超过1024kB。
+3. 不要把data中的任意一项的value设为undefined，否则可能会有引起一些不可预料的bug。
+
+#### 页面的用户行为
+
+小程序宿主环境提供了四个和页面相关的用户行为回调：
+
+1. 下拉刷新 onPullDownRefresh
+   监听用户下拉刷新事件，需要在app.json的window选项中或页面配置page.json中设置enablePullDownRefresh为true。当处理完数据刷新后，wx.stopPullDownRefresh可以停止当前页面的下拉刷新。
+2. 上拉触底 onReachBottom
+   监听用户上拉触底事件。可以在app.json的window选项中或页面配置page.json中设置触发距离onReachBottomDistance。在触发距离内滑动期间，本事件只会被触发一次。
+3. 页面滚动 onPageScroll
+   监听用户滑动页面事件，参数为 Object，包含 scrollTop 字段，表示页面在垂直方向已滚动的距离（单位px）。
+4. 用户转发 onShareAppMessage
+   只有定义了此事件处理函数，右上角菜单才会显示“转发”按钮，在用户点击转发按钮的时候会调用，此事件需要return一个Object，包含title和path两个字段，用于自定义转发内容
+
+ 使用onShareAppMessage自定义转发字段
+
+```javascript
+// page.js
+Page({
+onShareAppMessage: function () {
+ return {
+   title: '自定义转发标题',
+   path: '/page/user?id=123'
+ }
+}
+})
+```
+
+#### 页面跳转和路由
+
+一个小程序拥有多个页面，我们可以通过wx.navigateTo推入一个新的页面，如图3-6所示，在首页使用2次wx.navigateTo后，页面层级会有三层，我们把这样的一个页面层级称为页面栈。
+
+后续为了表述方便，我们采用这样的方式进行描述页面栈：[ pageA, pageB, pageC ]，其中pageA在最底下，pageC在最顶上，也就是用户所看到的界面，需要注意在本书编写的时候，小程序宿主环境限制了这个页面栈的最大层级为10层 ，也就是当页面栈到达10层之后就没有办法再推入新的页面了。我们下面来通过上边这个页面栈描述以下几个和导航相关的API。
+
+使用 wx.navigateTo({ url: 'pageD' }) 可以往当前页面栈多推入一个 pageD，此时页面栈变成 [ pageA, pageB, pageC, pageD ]。
+
+使用 wx.navigateBack() 可以退出当前页面栈的最顶上页面，此时页面栈变成 [ pageA, pageB, pageC ]。
+使用wx.redirectTo({ url: 'pageE' }) 是替换当前页变成pageE，此时页面栈变成 [ pageA, pageB, pageE ]，当页面栈到达10层没法再新增的时候，往往就是使用redirectTo这个API进行页面跳转。
+小程序提供了原生的Tabbar支持，我们可以在app.json声明tabBar字段来定义Tabbar页（注：更多详细参数见Tabbar官方文档 ）。
+
+app.json定义小程序底部tab
+
+```json
+{
+  "tabBar": {
+    "list": [
+      { "text": "Tab1", "pagePath": "pageA" },
+      { "text": "Tab1", "pagePath": "pageF" },
+      { "text": "Tab1", "pagePath": "pageG" }
+    ]
+  }
+}
+```
+
+我们可以在刚刚的例子所在的页面栈中使用wx.switchTab({ url: 'pageF' })，此时原来的页面栈会被清空（除了已经声明为Tabbar页pageA外其他页面会被销毁），然后会切到pageF所在的tab页面，页面栈变成 [ pageF ]，此时点击Tab1切回到pageA时，pageA不会再触发onLoad，因为pageA没有被销毁。
+
+补充一下，wx.navigateTo和wx.redirectTo只能打开非TabBar页面，wx.switchTab只能打开Tabbar页面。
+
+我们还可以使用 wx. reLaunch({ url: 'pageH' }) 重启小程序，并且打开pageH，此时页面栈为 [ pageH ]
+
+页面路由触发方式及页面生命周期函数的对应关系
+
+| 路由方式        | 触发时机                   | 路由前页面生命周期 | 路由后页面生命周期 |
+| :-------------- | :------------------------- | :----------------- | :----------------- |
+| 初始化          | 小程序打开的第一个页面     |                    | onLoad, onShow     |
+| 打开新页面 调用 | API wx.navigateTo          | onHide             | onLoad, onShow     |
+| 页面重定向 调用 | API wx.redirectTo          | onUnload           | onLoad, onShow     |
+| 页面返回 调用   | API wx.navigateBack        | onUnload           | onShow             |
+| Tab             | 切换 调用 API wx.switchTab | 请参考表3-6        | 请参考表3-6        |
+| 重启动          | 调用 API wx.reLaunch       | onUnload           | onLoad, onShow     |
+
+Tab 切换对应的生命周期（以 A、B 页面为 Tabbar 页面，C 是从 A 页面打开的页面，D 页面是从 C 页面打开的页面为例）如表3-6所示，注意Tabbar页面初始化之后不会被销毁。
+
+表3-6 页面路由触发方式及页面生命周期函数的对应关系
+
+| 当前页面      | 路由后页面  | 触发的生命周期（按顺序）                           |
+| :------------ | :---------- | :------------------------------------------------- |
+| A             | A           | 无                                                 |
+| A             | B           | A.onHide(), B.onLoad(), B.onShow()                 |
+| A             | B(再次打开) | A.onHide(), B.onShow()                             |
+| C             | A           | C.onUnload(), A.onShow()                           |
+| C             | B           | C.onUnload(), B.onLoad(), B.onShow()               |
+| D             | B           | D.onUnload(), C.onUnload(), B.onLoad(), B.onShow() |
+| D(从转发进入) | A           | D.onUnload(), A.onLoad(), A.onShow()               |
+| D(从转发进入) | B           | D.onUnload(), B.onLoad(), B.onShow()               |
+
+
+
+## 组件
